Highly improved Chrome extension
Full list feature changes in this commit:
- Support for iframes
- Switched to content-type (MIME) detection instead of hard-coding a
  case-sensitive check for the .PDF extension
- The PDF's original URL is visible in the omnibox
- Support for incognito mode

Note: PDF viewer is disabled for the file:// + incognito
combination, because it's currently impossible to get the combination
to work.

See https://github.com/mozilla/pdf.js/pull/3017#issuecomment-15693432

--- a/extensions/chrome/manifest.json
+++ b/extensions/chrome/manifest.json
@@ -10,14 +10,20 @@
   },
   "permissions": [
     "webRequest", "webRequestBlocking",
-    "http://*/*.pdf",
-    "https://*/*.pdf",
-    "file:///*/*.pdf",
-    "http://*/*.PDF",
-    "https://*/*.PDF",
-    "file://*/*.PDF"
+    "<all_urls>",
+    "tabs"
   ],
+  "content_scripts": [{
+      "matches": [
+          "*://*/*.pdf*",
+          "*://*/*.PDF*"
+       ],
+       "css": ["hide-xhtml-error.css"]
+  }],
   "background": {
     "page": "pdfHandler.html"
-  }
+  },
+  "web_accessible_resources": [
+    "content/*"
+  ]
 }
