Work-around for http://crbug.com/276898
When a new incognito session is started, the onExecuteMimeTypeHandler event is
often not dispatched in time. Instead, it's triggered in the non-incognito profile.

This commit offers a work-around that allows new incognito instances to view PDF files.

--- a/extensions/chromium/manifest.json
+++ b/extensions/chromium/manifest.json
@@ -13,6 +13,7 @@
     "<all_urls>",
     "tabs",
     "webNavigation",
+    "storage",
     "streamsPrivate"
   ],
   /* FOR demo & debugging purposes only! This key is required to get access to the streams API.
