[CRX] Change Viewer insertion method
And use split incognito mode

Previous method:
- Rewrite content type to XHTML, followed by a content script
  to cancel and replace the document with the viewer.
  ( https://github.com/mozilla/pdf.js/pull/3017 )

New method:
- Cancel loading of the document, followed by a redirect to the viewer

Disadvantage of new method:
- URLs are no longer "nice". This will be addressed by cherry-picking
  a commit from the crx-using-streams-api branch.

Advantages of new method:
- Idle time is minimal. In some cases (with large documents),
  it took too much time before the content script was activated.
  During this period, the page looked blank, and the contents of
  the PDF file were still retrieved and **discarded**.
  With the new method, the idle time is minimal, because the request
  is immediately cancelled.
- No FOUXEP (Flash of unhidden XML error page), because the XHTML
  Content-Type hack is no longer used.

--- a/extensions/chromium/manifest.json
+++ b/extensions/chromium/manifest.json
@@ -15,17 +15,15 @@
     "webNavigation"
   ],
   "content_scripts": [{
-      "matches": [
-          "*://*/*.pdf*",
-          "*://*/*.PDF*"
-       ],
-       "css": ["hide-xhtml-error.css"]
+    "matches": ["file://*/*"],
+    "js": ["nothing.js"]
   }],
   "background": {
     "page": "pdfHandler.html"
   },
+  "incognito": "split",
   "web_accessible_resources": [
-    "patch-worker.js",
-    "content/*"
+    "getFrameId",
+    "content/web/viewer.html"
   ]
 }
