--- a/extensions/chromium/manifest.json
+++ b/extensions/chromium/manifest.json
@@ -9,6 +9,7 @@
     "16": "icon16.png"
   },
   "permissions": [
+    "fileBrowserHandler",
     "webRequest", "webRequestBlocking",
     "<all_urls>",
     "tabs",
@@ -24,6 +25,13 @@
       "file://*/*"
     ],
     "js": ["nothing.js"]
+  }],
+  "file_browser_handlers": [{
+    "id": "open-as-pdf",
+    "default_title": "Open with PDF Viewer",
+    "file_filters": [
+      "filesystem:*.pdf"
+    ]
   }],
   "mime_types": [
     "application/pdf"
@@ -47,6 +55,8 @@
     "https:/*",
     "ftp:/*",
     "file:/*",
-    "chrome-extension:/*"
+    "chrome-extension:/*",
+    "filesystem:/*",
+    "drive:*"
   ]
 }
