<object> / <embed> support in Chromium extension

--- a/extensions/chromium/manifest.json
+++ b/extensions/chromium/manifest.json
@@ -25,6 +25,8 @@
       "file://*/*"
     ],
     "run_at": "document_start",
+    "all_frames": true,
+    "css": ["contentstyle.css"],
     "js": ["contentscript.js"]
   }],
   "file_browser_handlers": [{
