Don't skip mapping of glyphs for CIDFontType2 fonts with a CIDToGIDMap
Also don't skip mapping of glyphs which are empty, if the corresponding charCode is included in toUnicode.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -18,6 +18,7 @@
 !sizes.pdf
 !close-path-bug.pdf
 !issue4630.pdf
+!issue5202.pdf
 !issue5280.pdf
 !alphatrans.pdf
 !devicen.pdf
@@ -62,6 +63,7 @@
 !issue1002.pdf
 !issue925.pdf
 !issue2840.pdf
+!issue4061.pdf
 !issue4668.pdf
 !issue5039.pdf
 !issue5070.pdf
