Add a reduced test-case for issue 5801

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -4,6 +4,7 @@
 !tracemonkey.pdf
 !issue2391-1.pdf
 !issue2391-2.pdf
+!issue5801.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
