--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -7,6 +7,7 @@
 !issue2391-2.pdf
 !issue5801.pdf
 !issue5972.pdf
+!issue5874.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
