Apply char spacing only when there are chars.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -6,6 +6,7 @@
 !issue2391-1.pdf
 !issue2391-2.pdf
 !issue5801.pdf
+!issue5972.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
