--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "pdf.js",
   "version": "0.8.0",
   "devDependencies": {
-    "jsdoc": "3.3.0-alpha9",
-    "jshint": "~2.4.0",
-    "wintersmith": "~2.0.0",
-    "moment": "~2.3.0",
-    "underscore": "~1.4.0",
+    "jsdoc": "^3.3.0-alpha9",
+    "jshint": "^2.4.0",
+    "wintersmith": "^2.0.0",
     "rimraf": "^2.4.1",
-    "shelljs": "0.4.0",
-    "typogr": "~0.5.0",
-    "yargs": "~1.2.1"
+    "shelljs": "~0.5.1",
+    "typogr": "~0.6.5",
+    "yargs": "^3.14.0"
   },
   "scripts": {
     "test": "node ./node_modules/.bin/jshint --extra-ext .jsm ."
@@ -19,10 +17,5 @@
     "type": "git",
     "url": "git://github.com/mozilla/pdf.js.git"
   },
-  "licenses": [
-    {
-      "type": "Apache v2",
-      "url": "https://github.com/mozilla/pdf.js/blob/master/LICENSE"
-    }
-  ]
+  "license": "Apache-2.0"
 }
