Add more reduced test-cases for PR 6171

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -101,6 +101,8 @@
 !bug1028735.pdf
 !bug1046314.pdf
 !bug1065245.pdf
+!bug1151216.pdf
+!bug1175962.pdf
 !basicapi.pdf
 !mixedfonts.pdf
 !shading_extend.pdf
