fix handling of flags 1-3 in coons shading
Short story: somebody got lost in two different indices. pi is an index in the stream and is explained on page 198 of the 32000-spec (however 1-based there), and ps is an index to something in PDF.js. I used the code from flag 0 (which works) to understand which is which. It is also important to understand that for flags 1,2 and 3, the stream is always assigned to the same coordinates and colors. What changes is which "old" coordinates and colors are assigned to what is "missing" in the stream. This is why for these flags, the code is identical except for the assignments in the first "row".

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -127,6 +127,7 @@
 !bug946506.pdf
 !issue3885.pdf
 !bug859204.pdf
+!coons-allflags-withfunction.pdf
 !issue4246.pdf
 !issue4461.pdf
 !issue4573.pdf
