Test case for tensor shading PR 6310

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -128,6 +128,7 @@
 !issue3885.pdf
 !bug859204.pdf
 !coons-allflags-withfunction.pdf
+!tensor-allflags-withfunction.pdf
 !issue4246.pdf
 !issue4461.pdf
 !issue4573.pdf
