Fallback in `readCmapTable`, instead of using `error`, for TrueType fonts with unsupported cmap formats (bug 1200096)
Fixes https://bugzilla.mozilla.org/show_bug.cgi?id=1200096.

The problematic font has a `format 2` cmap, which we've never supported properly. Prior to PR 2606, we were able to fallback to a working state, despite not having proper support for that cmap format.

Obviously the best/correct solution would be to implement actual support for more cmap formats[1]. However, I'm hoping that a simple patch will be OK for now, given that:
 - `format 2` cmaps seem to be quite rare in practice, since this has been broken for 2.5 years before anyone noticed.
 - Having a simple patch will make potential uplifts a lot easier.

[1] See the specification at https://developer.apple.com/fonts/TrueType-Reference-Manual/RM06/Chap6cmap.html

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -15,6 +15,7 @@
 !arial_unicode_en_cidfont.pdf
 !asciihexdecode.pdf
 !bug1050040.pdf
+!bug1200096.pdf
 !canvas.pdf
 !complex_ttf_font.pdf
 !extgstate.pdf
