--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -16,6 +16,7 @@
 !arial_unicode_ab_cidfont.pdf
 !arial_unicode_en_cidfont.pdf
 !asciihexdecode.pdf
+!bug1020858.pdf
 !bug1050040.pdf
 !bug1200096.pdf
 !canvas.pdf
