--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.8.0",
   "devDependencies": {
     "jsdoc": "^3.3.0-alpha9",
-    "jshint": "^2.4.0",
+    "jshint": "~2.8.0",
     "wintersmith": "^2.0.0",
     "rimraf": "^2.4.1",
     "shelljs": "~0.4.0",
