Replace the unavailable linked test-cases for PR 2606 with reduced test-cases
Re: PR 2606.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -5,6 +5,7 @@
 !TrueType_without_cmap.pdf
 !franz.pdf
 !franz_2.pdf
+!german-umlaut-r.pdf
 !xref_command_missing.pdf
 !issue2391-1.pdf
 !issue2391-2.pdf
@@ -165,6 +166,7 @@
 !issue5334.pdf
 !bug1186827.pdf
 !issue215.pdf
+!issue1512r.pdf
 !issue2128r.pdf
 !issue5540.pdf
 !issue5549.pdf
