Fix the `charCodeOf` method in `IdentityToUnicodeMap` in order to prevent text selection from breaking
After PR 6590, `font.spaceWidth` is now called in more cases than before (in `PartialEvaluator_getTextContent`), which exposed an underlying issue with `IdentityToUnicodeMap_charCodeOf` throwing an error.
This breaks text-selection in some PDF files found in the wild, hence this patch replaces the `error` with an actual function instead (modelled after `IdentityCMap_charCodeOf`).

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -179,6 +179,7 @@
 !issue5549.pdf
 !issue5475.pdf
 !annotation-border-styles.pdf
+!IdentityToUnicodeMap_charCodeOf.pdf
 !issue5481.pdf
 !issue5567.pdf
 !issue5701.pdf
