--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "devDependencies": {
     "jsdoc": "^3.3.0-alpha9",
     "jshint": "~2.8.0",
-    "wintersmith": "^2.0.0",
     "node-ensure": "^0.0.0",
+    "requirejs": "^2.1.22",
     "rimraf": "^2.4.1",
     "shelljs": "~0.4.0",
     "typogr": "~0.6.5",
+    "wintersmith": "^2.0.0",
     "yargs": "^3.14.0"
   },
   "scripts": {
