Add validation for callsubr and callgsubr for type 2 charstrings.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -26,6 +26,7 @@
 !issue5564_reduced.pdf
 !canvas.pdf
 !complex_ttf_font.pdf
+!issue3694_reduced.pdf
 !extgstate.pdf
 !rotation.pdf
 !simpletype3font.pdf
@@ -38,6 +39,7 @@
 !close-path-bug.pdf
 !issue6019.pdf
 !issue6621.pdf
+!issue6286.pdf
 !issue1055r.pdf
 !issue1293r.pdf
 !issue1655r.pdf
