Check that CIDFontType0 fonts does not actually contain OpenType font files (issue 6782)
*This patch follows a similar idea as PR 5756.*

The patch is based on the nice debugging done by Brendan in the referenced issue 6782.
A better way to handle this, and similar issues, would probably be to completely ignore what the PDF file claims about font type/subtype, and just check the actual data. But until that kind of rewrite happens, this patch should help.

Fixes 6782.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -14,6 +14,7 @@
 !issue5946.pdf
 !issue5972.pdf
 !issue5874.pdf
+!issue6782.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
