Group popup creation code and apply it to more annotation types

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -211,6 +211,7 @@
 !issue6108.pdf
 !issue6113.pdf
 !openoffice.pdf
+!issue7014.pdf
 !annotation-link-text-popup.pdf
 !annotation-text-without-popup.pdf
 !annotation-underline.pdf
