--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -32,6 +32,8 @@
 !bug1200096.pdf
 !issue5564_reduced.pdf
 !canvas.pdf
+!bug1132849.pdf
+!issue6894.pdf
 !issue5804.pdf
 !ShowText-ShadingPattern.pdf
 !complex_ttf_font.pdf
