Ensure that the `params` parameter of the `PredictorStream` is a dictionary (issue 7200)
Fixes 7200.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -23,6 +23,7 @@
 !issue7020.pdf
 !issue7101.pdf
 !issue7115.pdf
+!issue7200.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
