Adjust incorrect first obj number of "free" xref entry in `XRef_readXRefTable` (issue 7229)
Fixes 7229.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -24,6 +24,7 @@
 !issue7101.pdf
 !issue7115.pdf
 !issue7200.pdf
+!issue7229.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
