--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "requirejs": "^2.1.22",
     "rimraf": "^2.4.1",
     "shelljs": "~0.4.0",
+    "streamqueue": "^1.1.1",
     "typogr": "~0.6.5",
     "uglify-js": "^2.6.1",
     "wintersmith": "^2.0.0",
