--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -249,4 +249,5 @@
 !annotation-squiggly.pdf
 !annotation-highlight.pdf
 !annotation-fileattachment.pdf
+!annotation-text-widget.pdf
 !zero_descent.pdf
