Prevent rendering `TextWidgetAnnotation`s in both the `core`/`display` layer (issue 7643)

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -204,6 +204,9 @@
 !bug946506.pdf
 !issue3885.pdf
 !bug859204.pdf
+!annotation-tx.pdf
+!annotation-tx2.pdf
+!annotation-tx3.pdf
 !coons-allflags-withfunction.pdf
 !tensor-allflags-withfunction.pdf
 !issue4246.pdf
