Add a reduced `load` test for issue 7665

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -39,6 +39,7 @@
 !issue7492.pdf
 !issue7544.pdf
 !issue7598.pdf
+!issue7665.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
