Only skip parsing a stream in `Parser_makeFilter` when we know for sure that it is empty (PR 6372 follow-up)
For PDF files with multiple `/Filter`s, where the `/Length` entry is zero, we fail to render the file correctly. The reason is that `maybeLength` is `null` for the every filter except the first, and `!maybeLength` is thus truthy.
Hence it seems that we should completely ignore the `/Length` entry and also explicitly check `maybeLength === 0`.

Note that I've not (yet) come across a PDF file with this issue in the wild, but given all the stupid things PDF generators do I wouldn't be surprised if such a file actually exists. In order to prevent a possible future bug, I'm submitting this patch which includes a hand-edited PDF file that we currently cannot render correctly (but e.g. Adobe Reader can).

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -65,6 +65,7 @@
 !simpletype3font.pdf
 !sizes.pdf
 !javauninstall-7r.pdf
+!multiple-filters-length-zero.pdf
 !issue3205r.pdf
 !issue3207r.pdf
 !issue3263r.pdf
