--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -255,4 +255,5 @@
 !annotation-highlight.pdf
 !annotation-fileattachment.pdf
 !annotation-text-widget.pdf
+!annotation-choice-widget.pdf
 !zero_descent.pdf
