Improve rendering of non-embedded NuptialScript font
*This patch fixes something that I noticed while debugging https://bugzilla.mozilla.org/show_bug.cgi?id=1308536.*

The PDF file contains a font called "NuptialScript", which unfortunately is not embedded. Since that is a non-standard font we will not be able to render it entirely correct. However, by adding "NuptialScript" to the `getNonStdFontMap`, we can at least improve the rendering slightly by using an italic (serif) fallback font.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -71,6 +71,7 @@
 !sizes.pdf
 !javauninstall-7r.pdf
 !multiple-filters-length-zero.pdf
+!non-embedded-NuptialScript.pdf
 !issue3205r.pdf
 !issue3207r.pdf
 !issue3263r.pdf
