Lint: update `.jshintignore`
Remove folders that no longer exist and ignore folders with binary/PDF
files.

--- a/.jshintignore
+++ b/.jshintignore
@@ -3,16 +3,14 @@ l10n/
 docs/
 node_modules/
 examples/
+external/bcmaps/
 external/webL10n/
-external/shelljs/
-external/jpgjs/
-external/jasmine/
 external/cmapscompress/
 external/importL10n/
 external/builder/fixtures_esprima/
-shared/
 test/tmp/
 test/features/
+test/pdfs/
 test/resources/
 test/font/*_spec.js
 *~/
