Use `stringToPDFString` to sanitizing bad "Prefix" entries in Page Label dictionaries
It seems that certain bad PDF generators can create badly encoded "Prefix" entries for Page Labels, one example being http://ukjewishfilm.org/wp-content/uploads/2015/09/Jewish-Film-Festival-Programme-ONLINE.pdf.

Unfortunately I didn't come across such a PDF file while adding the API support for Page Labels, but with them now being used in the viewer I just found this issue. With this patch, we now display the Page Labels in the same way as Adobe Reader.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -40,6 +40,7 @@
 !issue7544.pdf
 !issue7598.pdf
 !issue7665.pdf
+!bad-PageLabels.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
 !ThuluthFeatures.pdf
