Ensure that `PartialEvaluator_extractWidths` is able to handle indirect objects in all kinds of "width" data (issue 7855)
Fixes 7855.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -42,6 +42,7 @@
 !issue7598.pdf
 !issue7665.pdf
 !issue7835.pdf
+!issue7855.pdf
 !bad-PageLabels.pdf
 !filled-background.pdf
 !ArabicCIDTrueType.pdf
