Button widget annotations: implement reference testing
Moreover, ensure that the read-only state is respected and improve CSS
names.

--- a/test/pdfs/.gitignore
+++ b/test/pdfs/.gitignore
@@ -266,5 +266,6 @@
 !annotation-fileattachment.pdf
 !annotation-text-widget.pdf
 !annotation-choice-widget.pdf
+!annotation-button-widget.pdf
 !zero_descent.pdf
 !operator-in-TJ-array.pdf
