--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "gulp-zip": "^3.2.0",
-    "jasmine-core": "^2.4.1",
+    "jasmine": "^2.5.2",
+    "jasmine-core": "^2.5.2",
     "jsdoc": "^3.3.0-alpha9",
     "mkdirp": "^0.5.1",
     "node-ensure": "^0.0.0",
@@ -23,7 +24,7 @@
     "yargs": "^3.14.0"
   },
   "scripts": {
-    "test": "gulp lint"
+    "test": "gulp lint unittestcli"
   },
   "repository": {
     "type": "git",
