Enable the `no-unsafe-finally`/`no-octal`/`no-useless-call` ESLint rules
http://eslint.org/docs/rules/no-unsafe-finally, there's just one violation which in this case can actually be ignored since there's nothing `return`ed there.
http://eslint.org/docs/rules/no-octal, there're no violations in the code-base.
http://eslint.org/docs/rules/no-useless-call, there's just one violation that needs to be fixed.

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,6 +36,7 @@
     "no-sparse-arrays": "error",
     "no-unexpected-multiline": "error",
     "no-unreachable": "error",
+    "no-unsafe-finally": "error",
     "no-unsafe-negation": "error",
     "use-isnan": "error",
     "valid-typeof": ["error", { "requireStringLiterals": true, }],
@@ -60,10 +61,12 @@
     "no-new-wrappers": "error",
     "no-new": "error",
     "no-octal-escape": "error",
+    "no-octal": "error",
     "no-redeclare": "error",
     "no-self-assign": "error",
     "no-unused-expressions": "error",
     "no-unused-labels": "error",
+    "no-useless-call": "error",
     "no-useless-concat": "error",
     "wrap-iife": ["error", "any"],
     "yoda": ["error", "never", { "onlyEquality": true, }],
